add app main title

--- a/React-CRUD-Todo-App/src/index.css
+++ b/React-CRUD-Todo-App/src/index.css
@@ -119,3 +119,10 @@ hr {
   background-color: hsl(var(--accent) / 0.5);
   border-radius: var(--_radius);
 }
+
+.container {
+  margin: 4vmax max(calc((100vw - 70rem) / 2), 1.5rem) 6em;
+  display: grid;
+  gap: clamp(2rem, 3.5vmax, 8rem);
+  text-align: center;
+}
