Add update task input

--- a/React-CRUD-Todo-App/src/index.css
+++ b/React-CRUD-Todo-App/src/index.css
@@ -222,3 +222,22 @@ hr {
   box-shadow: 0 0 0 hsl(var(--accent) / 0.3), 0 0 0 0.2em hsl(var(--bg)),
     0 0 0 0.4em hsl(var(--accent) / 0.7);
 }
+
+[role="dialog"] {
+  position: fixed;
+  z-index: 100;
+  inset: 0;
+  padding-inline: 2vmax;
+  display: grid;
+  place-items: center;
+  background-color: hsl(var(--bg) / 0.7);
+}
+
+[role="dialog"] .todo {
+  max-width: 40ch;
+  padding: 2em 1.3em 1.3em;
+  background-color: hsl(var(--bg));
+  border-radius: var(--_radius);
+  border: 0.1em solid hsl(var(--accent) / 0.3);
+  box-shadow: 0 -1em 3em hsl(var(--muted)), 0 1em 3em hsl(var(--accent) / 0.2);
+}
