add status to activate color selection mode | add color selection mode

--- a/React-CRUD-Todo-App/src/components/cssmodules/ThemeSwitcher.module.css
+++ b/React-CRUD-Todo-App/src/components/cssmodules/ThemeSwitcher.module.css
@@ -14,3 +14,10 @@
   display: flex;
   gap: 1em;
 }
+
+.close {
+  position: absolute;
+  top: -2em;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
