--- a/React-CRUD-Todo-App/src/components/cssmodules/ThemeSwitcher.module.css
+++ b/React-CRUD-Todo-App/src/components/cssmodules/ThemeSwitcher.module.css
@@ -21,3 +21,54 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.picker:focus {
+  outline: none;
+}
+
+.picker {
+  -webkit-appearance: none;
+  appearance: none;
+  background: linear-gradient(
+    to right,
+    hsl(0, 50%, 50%),
+    hsl(25, 50%, 50%),
+    hsl(50, 50%, 50%),
+    hsl(75, 50%, 50%),
+    hsl(100, 50%, 50%),
+    hsl(125, 50%, 50%),
+    hsl(150, 50%, 50%),
+    hsl(175, 50%, 50%),
+    hsl(200, 50%, 50%),
+    hsl(225, 50%, 50%),
+    hsl(250, 50%, 50%),
+    hsl(275, 50%, 50%),
+    hsl(300, 50%, 50%),
+    hsl(325, 50%, 50%),
+    hsl(350, 50%, 50%)
+  );
+  border-radius: 100vmax;
+  border: 0.2em solid hsl(var(--muted));
+  box-shadow: 0 0 0.8em hsl(var(--accent) / 0.4);
+  height: calc(var(--wrapperSize) * 0.2);
+  outline: none;
+  width: 100%;
+}
+
+.picker::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: hsl(var(--accent));
+  border-radius: 100vmax;
+  border: none;
+  box-shadow: 0 0 0 0.25em hsl(var(--muted)),
+    0 0 0 -0.4em hsl(var(--accent) / 08);
+  cursor: ew-resize;
+  height: calc(var(--wrapperSize) * 0.35);
+  width: calc(var(--wrapperSize) * 0.35);
+}
+
+.picker:focus::-webkit-slider-thumb {
+  box-shadow: 0 0 0 0.25em hsl(var(--muted)),
+    0 0 0 0.45em hsl(var(--accent) / 0.8);
+}
